src/components/export/pdfExport.module.scss
@import '@/styles/colors';
@import '@/styles/global.scss';
@import '@/styles/fonts';
@import '@/styles/breakpoints';

.listItem {
  :global{
    .mantine-List-itemIcon {
      background-color: blue;
      width: auto;
      max-width: auto;
      display: flex;
      flex-direction: row;
    }
  }
}

.root {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow-y: auto;
  @include md {
    flex-direction: row;
  }
}

.componentTitle {
  display: block;
  font-size: 18px;
  font-family: $fontOpenSans;
  font-weight: 700;
  color: $gray2;
  margin-top: 25px;
}

.settingsPanel {
  width: 100%;
  height: 100%;
  padding: 10px;
  overflow-y: auto;
  @include md {
    width: 40%;
  }
}

.pdfFrameContainer {
  width: 100%;
  height: 100%;
  text-align: end;
  @include md {
    width: 60%;
  }
}

.pdfFrame {
  height: 100%;
  width: 100%;
}

.noFilesMsg {
  @extend %emptyListSpan;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.scaleRow {
  display: flex;
}

.scaleInput {
  font-family: $fontOpenSans;
  color: $gray1;
  font-weight: 700;
  height: 24px;

  width: 50px;
  input {
    text-align: right;
  }
}

.inputContainer {
  margin-left: 5px;
  height: 30px;
  width: auto;
  display: flex;
  flex-direction: row;
}

.layerRow {
  display: flex;
  width: 100%;
  flex-direction: column;
  max-width: 300px;
  @include md {
    flex-direction: row;
  }
  .layerInput {
    margin-top: none;
  }
}

.layerInput {
  margin: 5px;
  margin-right: 10px;
  margin-top: 10px;
  width: fit-content;
  min-width: 50px;
  @include md {
    min-width: 100px;
  }
}

.headerInput {
  width: 100%;
}

.sortableList {
  li {
    padding: 0.5em 0;
    border-bottom: 1px solid #ccc;
  }
}

.btnAdd {
  color: $colorPrimary;
  margin-top: 5px;
  border-radius: 10px;
  :global {
    .MuiListItemIcon-root {
      color: $colorPrimary;
    }
  }
}

